--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<link rel="stylesheet" type="text/css" href="headers.css">
+	<link rel="stylesheet" type="text/css" href="nav.css">
 	<title>Document</title>
 </head>
 <body>
