--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<title>Document</title>
 </head>
 <body>
-	<h1>My App with Styles</h1>
+	<h1>My App with Styles and Scripts</h1>
+	<script type="text/javascript" src="app.js"></script>
 </body>
 </html>
